--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
     </main>
     <footer>
         <div class="text-center py-10">
-            <p class="dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
-            <p class="dark:text-slate-300">Todos los derechos reservados.</p>
+            <p class="font-semi-bold dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
+            <p class="font-semi-bold dark:text-slate-300">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 dark:text-white">
                 <li class="w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
                   <a href="https://www.facebook.com/colo.soad.3/" target="_blank" class="iconos-a">
