--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -6,9 +6,10 @@
     <link href="../output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
+    <script defer src="../js/script.js"></script>
     <title>RESPONSIVE - Tailwind</title>
 </head>
-<body class="smartphone:bg-fucsiaCool sm:bg-pink-950 md:bg-violet-950 lg:bg-slate-600 ">
+<body class="smartphone:bg-fucsiaCool sm:bg-pink-950 md:bg-violet-950 lg:bg-slate-600 dark:bg-black">
     <a class="
         fixed
         left-4
@@ -26,20 +27,20 @@
         href="../index.html">
             <i class="fa-solid fa-arrow-left"></i>
     </a>
-    <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
+    <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
         Responsive Design
     </p>
-    <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
+    <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
         Flex Box
     </p>
     <section class="smartphone:mb-40">
-        <div class="border-2 border-black p-6 mx-auto mt-10 mb-10 smartphone:w-60 sm:w-80 md:w-125 lg:w-150">
+        <div class="border-2 border-black p-6 mx-auto mt-10 mb-10 smartphone:w-60 sm:w-80 md:w-125 lg:w-150 dark:border-slate-300">
 
-            <h2 class="text-xl font-bold sm:w-72 md:w-96 lg:w-100">
+            <h2 class="text-xl font-bold sm:w-72 md:w-96 lg:w-100 dark:text-slate-400 ">
                 Aprendiendo responsive con TailwindCss
             </h2>
 
-            <p class="sm:w-72 md:w-96 lg:w-100">
+            <p class="sm:w-72 md:w-96 lg:w-100 dark:text-slate-400">
                 En este apartado de esta página vamos a ver la parte responsive con tailwindcss
             </p>
         </div>
@@ -61,7 +62,7 @@
         <div class="card grow">3</div>
         <div class="card grow">4</div>
     </div>
-    <p class="text-center text-3xl pt-10 pb-5 px-5">
+    <p class="text-center text-3xl pt-10 pb-5 px-5 dark:text-slate-400">
         Medianera utilizando la clase "basis"
     </p>
     <div class="flex gap-1 flex-wrap justify-center items-center bg-cemento m-2 py-5 rounded-lg border-2 border-black sm:w-1/2 sm:mx-auto lg:w-1/4">
@@ -79,8 +80,8 @@
         <div class="bricks basis-1/2 "></div>
     </div>
 
-    <p class="text-center text-3xl pt-10 pb-5 px-5">
-        Collage
+    <p class="text-center text-3xl pt-10 pb-5 px-5 dark:text-slate-400">
+        Collage con la clase basis
     </p>
 
     <div class="flex gap-1 md:gap-2 lg:gap-3 flex-wrap justify-center lg:w-[900px] lg:mx-auto items-center bg-gray-300 mx-6 py-6 rounded-lg border-2 border-white ">
@@ -98,7 +99,7 @@
         <a href="https://img.freepik.com/foto-gratis/paisaje-natural-cielo-despejado-estrellado_23-2151683117.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage basis-1/3 bg-[url('https://img.freepik.com/foto-gratis/paisaje-natural-cielo-despejado-estrellado_23-2151683117.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
         <a href="https://img.freepik.com/foto-gratis/vista-montana-estetica-ensueno_23-2151700272.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage  basis-1/2 bg-[url('https://img.freepik.com/foto-gratis/vista-montana-estetica-ensueno_23-2151700272.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
     </div>
-    <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
+    <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
         Grid
     </p>
     <div class="grid grid-cols-4 gap-2 mx-6 lg:w-[900px] lg:mx-auto">
@@ -113,7 +114,7 @@
         <div class="card2 col-[1/4]">9</div>
         <div class="card2">10</div>
     </div>
-    <p class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
+    <p class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
         Maquetado de html con grid
     </p>
     <div class="grid grid-cols-2 gap-2 mx-6 py-6 h-[100vh] lg:w-[900px] lg:mx-auto">
@@ -124,8 +125,8 @@
         <div class="card2 row-[3/5] col-start-2">Aside</div>
         <div class="card2 col-span-2">Footer</div>
     </div>
-    <p class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
-        Collage
+    <p class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
+        Collage 2 con grid (col/row span)
     </p>
     <div class="grid grid-cols-3 gap-1 mx-6 py-6 px-6 rounded-lg h-[100vh] smartphoneRotate:grid-cols-6 smartphoneRotate:h-[1500px] bg-slate-300 lg:w-[900px] lg:mx-auto">
         
@@ -157,14 +158,14 @@
     </div>
     <footer>
         <div class="text-center py-10">
-            <p class="text-slate-300">© 2024 TAILWINDCSS PRATICE</p>
-            <p class="text-slate-300">Todos los derechos reservados.</p>
-            <ul class="flex justify-center flex-wrap gap-5 pt-2 text-white">
-                <li class="w-10 h-10 flex justify-center items-center bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
+            <p class="font-bold dark:text-slate-300 dark:font-normal">© 2024 TAILWINDCSS PRACTICE</p>
+            <p class="font-bold dark:text-slate-300 dark:font-normal">Todos los derechos reservados.</p>
+            <ul class="flex justify-center flex-wrap gap-5 pt-2 dark:text-white">
+                <li class="w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
                   <a href="https://www.facebook.com/colo.soad.3/" target="_blank" class="iconos-a">
                     <i class="fab fa-facebook-f icon p-2"></i>    </a>
                 </li>
-                <li class="w-10 h-10 flex justify-center items-center bg-white shadow-xl text-3xl mx-9 rounded-lg text-insta">
+                <li class="w-10 h-10 flex justify-center items-center bg-black dark:bg-white shadow-xl text-3xl mx-9 rounded-lg text-insta">
                     <a href="https://www.instagram.com/colosoad/" target="_blank" class="iconos-a">
                     <i class="fab fa-instagram icon p-2"></i>
                     </a>
