--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,16 @@
     <title>Tailwind - install</title>
 </head>
 <body class="dark:bg-black dark:transition-all ease-in-out">
-    <header class="mt-10 flex justify-center">
+    <header class="mt-10 flex justify-center w-screen">
+        <div class="lenguajes w-28 flex gap-2 mt-0" id="flags">
+            <div>
+                <img src="/src/assets/icons/ar.svg" alt="icono para el lenguaje español" data-lenguaje="es" class="w-[20px] cursor-pointer">
+            </div>
+            <div>
+                <img src="/src/assets/icons/us.svg" alt="icono para el lenguaje ingles" data-lenguaje="en" class="w-[20px] cursor-pointer">
+            </div>
+        </div>
+
         <div class="flex justify-center mb-5">
             <span class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center text-5xl mt-10">
                 Hello world!
