Agregando multi-idiomas para que futuro sitio bilingue

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,9 @@
 <body class="dark:bg-black dark:transition-all ease-in-out">
     <header class="mt-10 flex justify-center w-screen">
         <div class="lenguajes w-28 flex gap-2 mt-0" id="flags">
-            <div>
-                <img src="/src/assets/icons/ar.svg" alt="icono para el lenguaje español" data-lenguaje="es" class="w-[20px] cursor-pointer">
+            <div class="bg-[url('https://flagicons.lipis.dev/flags/4x3/ar.svg')] bg-cover bg-center w-[30px] h-[20px] cursor-pointer" data-lenguaje="es">
             </div>
-            <div>
-                <img src="/src/assets/icons/us.svg" alt="icono para el lenguaje ingles" data-lenguaje="en" class="w-[20px] cursor-pointer">
+            <div class="bg-[url('https://flagicons.lipis.dev/flags/4x3/us.svg')] bg-cover bg-center w-[30px] h-[20px] cursor-pointer rounded-full" data-lenguaje="en">
             </div>
         </div>
 
