Agregando multi-idiomas para que futuro sitio bilingue(modifico div de ars)

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body class="dark:bg-black dark:transition-all ease-in-out">
     <header class="mt-10 flex justify-center w-screen">
         <div class="lenguajes w-28 flex gap-2 mt-0" id="flags">
-            <div class="bg-[url('https://flagicons.lipis.dev/flags/4x3/ar.svg')] bg-cover bg-center w-[30px] h-[20px] cursor-pointer" data-lenguaje="es">
+            <div class="bg-[url('https://flagicons.lipis.dev/flags/4x3/ar.svg')] bg-cover bg-center w-[30px] h-[20px] cursor-pointer rounded-full" data-lenguaje="es">
             </div>
             <div class="bg-[url('https://flagicons.lipis.dev/flags/4x3/us.svg')] bg-cover bg-center w-[30px] h-[20px] cursor-pointer rounded-full" data-lenguaje="en">
             </div>
