--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -6,7 +6,7 @@
     <link href="../output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
-    <script defer src="../js/script.js"></script>
+    <script defer src="../js/preferences.js"></script>
     <title>RESPONSIVE - Tailwind</title>
 </head>
 <body class="smartphone:bg-fucsiaCool sm:bg-pink-950 md:bg-violet-950 lg:bg-slate-600 dark:bg-black">
