Agregando funcionalidad al sitio bilingue en las demas pages

--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -6,7 +6,7 @@
     <link href="../output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
-    <script defer src="../js/preferences.js"></script>
+    <script defer src="../js/preferences2.js"></script>
     <title>RESPONSIVE - Tailwind</title>
 </head>
 <body class="smartphone:bg-fucsiaCool sm:bg-pink-950 md:bg-violet-950 lg:bg-slate-600 dark:bg-black">
@@ -28,7 +28,7 @@
             <i class="fa-solid fa-arrow-left"></i>
     </a>
     <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
-        Responsive Design
+      Diseño Responsivo
     </p>
     <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
         Flex Box
@@ -158,8 +158,8 @@
     </div>
     <footer>
         <div class="text-center py-10">
-            <p class="font-bold dark:text-slate-300 dark:font-normal">© 2024 TAILWINDCSS PRACTICE</p>
-            <p class="font-bold dark:text-slate-300 dark:font-normal">Todos los derechos reservados.</p>
+            <p class="font-semi-bold dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
+            <p id="footerP" class="font-semi-bold dark:text-slate-300">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 dark:text-white">
                 <li class="w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
                   <a href="https://www.facebook.com/colo.soad.3/" target="_blank" class="iconos-a">
