--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -28,16 +28,16 @@
             <i class="fa-solid fa-arrow-left"></i>
     </a> 
     <header class="p-3 smartphone:mt-20 smartphoneRotate:mt-20">
-        <p class="text-center smartphone:text-2xl smartphoneRotate:text-5xl dark:text-slate-400">
+        <p id="titulo-contacto" class="text-center smartphone:text-2xl smartphoneRotate:text-5xl dark:text-slate-400">
             EJEMPLOS DE PSEUDOCLASES
         </p>
     </header>                   
     <main class="flex justify-center items-center flex-col">    
         <p class="text-center text-3xl mt-20 mx-auto mb-10 w-80 dark:text-slate-400">N°1( after, hover, focus, file, marker, selection, first-line, firts-letter )</p>
         <div class="w-80 bg-slate-100 rounded-lg flex items-center justify-center flex-wrap dark:bg-slate-100">
-            <button href="#" class="after:content-[''] after:absolute after:left-32 relative after:border-8 after:border-transparent after:top-3 after:border-l-pink-800 hover:after:border-l-pink-600 text-slate-300 my-4 bg-pink-800 p-2 rounded-md w-32 hover:bg-pink-600 ">Click Aquí!</button>
-            <input class="w-32 border ml-2 px-2 placeholder:text-pink-800 placeholder:italic focus:outline-none focus:ring-4 focus:ring-pink-800 focus:ring-opacity-50 border-pink-800 dark:bg-black" type="text" placeholder="Nombre">
-            <input type="file" class="file:bg-pink-800 file:border-0 file:rounded-lg file:text-slate-300 file:font-semibold file:px-2 pl-7 hover:file:bg-pink-600 my-4 justify-center">
+            <button id="btnClick" href="#" class="after:content-[''] after:absolute after:left-32 relative after:border-8 after:border-transparent after:top-3 after:border-l-pink-800 hover:after:border-l-pink-600 text-slate-300 my-4 bg-pink-800 p-2 rounded-md w-32 hover:bg-pink-600 ">Click Aquí!</button>
+            <input id="inputBtnContacto" class="w-32 border ml-2 px-2 placeholder:text-pink-800 placeholder:italic focus:outline-none focus:ring-4 focus:ring-pink-800 focus:ring-opacity-50 border-pink-800 dark:bg-black" type="text" name="nombre" placeholder="Nombre">
+            <input id="selectFile" type="file" class="file:bg-pink-800 file:border-0 file:rounded-lg file:text-slate-300 file:font-semibold file:px-2 pl-7 hover:file:bg-pink-600 my-4 justify-center">
         </div>
         <div class="w-80 bg-slate-100 rounded-lg flex items-center justify-center flex-wrap m-3 p-3">
             <ol class="
@@ -74,52 +74,15 @@
         <p class="text-center text-3xl mt-20 mx-auto mb-10 w-80 dark:text-slate-400">N°2( focus, invalid, peer, disabled y hover )</p>
         <div class="w-80 flex items-center justify-center flex-col" >
             <form action="" class="bg-white w-80 my-8 rounded-lg p-8 text-center">
-                <input 
-                    class="
-                    focus:outline-none 
-                    focus:ring-4
-                    focus:ring-purple-600
-                    focus:ring-opacity-50
-                    border 
-                    border-purple-300
-                    w-full 
-                    px-3 
-                    py-2 
-                    mb-4 
-                    rounded-md
-                    " 
-                    type="text" placeholder="Nombre" >
-                </input>
-                <input 
-                class="
-                focus:outline-none 
-                focus:ring-4
-                focus:ring-purple-600
-                focus:ring-opacity-50
-                invalid:focus:ring-red-600
-                border 
-                border-gray-300 
-                w-full 
-                px-3 
-                py-2 
-                mb-0 
-                rounded-md
-                peer
-                " 
-                type="email" placeholder="Correo">
-                </input>
-                    <p class="
-                        text-red-600 
-                        hidden
-                        peer-invalid:block">
+                <input id="inputNombre" class=" focus:outline-none focus:ring-4 focus:ring-purple-600 focus:ring-opacity-50 border border-purple-300 w-full px-3 py-2 mb-4 rounded-md" type="text" name="nombre" placeholder="Nombre"></input>
+                <input class="focus:outline-none focus:ring-4 focus:ring-purple-600 focus:ring-opacity-50 invalid:focus:ring-red-600 border border-gray-300 w-full px-3 py-2 mb-0 rounded-md peer" type="email" id="correo" placeholder="Correo"></input>
+                <p class="text-red-600 hidden peer-invalid:block">
                             (Correo incorrecto)
-                    </p>
-    
-                <input 
-                    class="disabled:bg-red-200 border border-gray-300 w-full px-3 py-2 mt-4 mb-4 rounded-md " type="current-password" placeholder="Contraseña" disabled>
+                </p>
+                <input id="password"
+                    class="disabled:bg-red-200 border border-gray-300 w-full px-3 py-2 mt-4 mb-4 rounded-md " type="current-password" placeholder="Contraseña" name="password" disabled>
                 </input>
-    
-                <input 
+                <input id="buttonIngresar"
                     class="bg-purple-600 w-full py-2 text-white rounded-md cursor-pointer hover:bg-purple-500" type="submit" value="INGRESAR">
                 </input>
             </form>
@@ -127,8 +90,8 @@
     </main>
     <footer>
         <div class="text-center py-10">
-            <p class="font-bold dark:text-slate-300 dark:font-normal">© 2024 TAILWINDCSS PRACTICE</p>
-            <p class="font-bold dark:text-slate-300 dark:font-normal">Todos los derechos reservados.</p>
+            <p class="font-semi-bold dark:text-slate-300">© 2024 TAILWINDCSS PRACTICE</p>
+            <p id="footerP" class="font-semi-bold dark:text-slate-300">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 dark:text-white">
                 <li class="w-10 h-10 flex justify-center bg-black items-center dark:bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
                   <a href="https://www.facebook.com/colo.soad.3/" target="_blank" class="iconos-a">
