--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -27,7 +27,7 @@
         href="../index.html">
             <i class="fa-solid fa-arrow-left"></i>
     </a>
-    <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
+    <p id="tituloPrincipalDiseño" class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
       Diseño Responsivo
     </p>
     <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
@@ -36,12 +36,12 @@
     <section class="smartphone:mb-40">
         <div class="border-2 border-black p-6 mx-auto mt-10 mb-10 smartphone:w-60 sm:w-80 md:w-125 lg:w-150 dark:border-slate-300">
 
-            <h2 class="text-xl font-bold sm:w-72 md:w-96 lg:w-100 dark:text-slate-400 ">
+            <h2 id="h2Responsive" class="text-xl font-bold sm:w-72 md:w-96 lg:w-100 dark:text-slate-400 ">
                 Aprendiendo responsive con TailwindCss
             </h2>
 
-            <p class="sm:w-72 md:w-96 lg:w-100 dark:text-slate-400">
-                En este apartado de esta página vamos a ver la parte responsive con tailwindcss
+            <p id="pResponsive" class="sm:w-72 md:w-96 lg:w-100 dark:text-slate-400">
+                En este apartado de esta página vamos a aprender diseño responsivo con tailwindcss
             </p>
         </div>
     </section>
@@ -62,8 +62,8 @@
         <div class="card grow">3</div>
         <div class="card grow">4</div>
     </div>
-    <p class="text-center text-3xl pt-10 pb-5 px-5 dark:text-slate-400">
-        Medianera utilizando la clase "basis"
+    <p id="wallBasis" class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
+        Pared utilizando la clase 'BASIS'
     </p>
     <div class="flex gap-1 flex-wrap justify-center items-center bg-cemento m-2 py-5 rounded-lg border-2 border-black sm:w-1/2 sm:mx-auto lg:w-1/4">
         <div class="bricks basis-1/2 "></div>
@@ -79,11 +79,9 @@
         <div class="bricks basis-1/3"></div>
         <div class="bricks basis-1/2 "></div>
     </div>
-
-    <p class="text-center text-3xl pt-10 pb-5 px-5 dark:text-slate-400">
-        Collage con la clase basis
+    <p id="collageBasis" class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
+        Collage con la clase 'BASIS'
     </p>
-
     <div class="flex gap-1 md:gap-2 lg:gap-3 flex-wrap justify-center lg:w-[900px] lg:mx-auto items-center bg-gray-300 mx-6 py-6 rounded-lg border-2 border-white ">
         <a href="https://img.freepik.com/foto-gratis/arco-iris-al-final-paisaje-carretera_23-2151596720.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage basis-1/2 bg-[url('https://img.freepik.com/foto-gratis/arco-iris-al-final-paisaje-carretera_23-2151596720.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
         <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage basis-1/3 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
@@ -100,7 +98,7 @@
         <a href="https://img.freepik.com/foto-gratis/vista-montana-estetica-ensueno_23-2151700272.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage  basis-1/2 bg-[url('https://img.freepik.com/foto-gratis/vista-montana-estetica-ensueno_23-2151700272.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
     </div>
     <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
-        Grid
+        GRID
     </p>
     <div class="grid grid-cols-4 gap-2 mx-6 lg:w-[900px] lg:mx-auto">
         <div class="card2 col-span-3">1</div>
@@ -114,8 +112,8 @@
         <div class="card2 col-[1/4]">9</div>
         <div class="card2">10</div>
     </div>
-    <p class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
-        Maquetado de html con grid
+    <p id="layoutGrid" class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
+        Maquetado de html con 'GRID'
     </p>
     <div class="grid grid-cols-2 gap-2 mx-6 py-6 h-[100vh] lg:w-[900px] lg:mx-auto">
         <div class="card2 col-span-2">Header</div>
@@ -125,8 +123,8 @@
         <div class="card2 row-[3/5] col-start-2">Aside</div>
         <div class="card2 col-span-2">Footer</div>
     </div>
-    <p class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
-        Collage 2 con grid (col/row span)
+    <p id="collageGrid" class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl dark:text-slate-400">
+        Collage con 'GRID' (col/row span)
     </p>
     <div class="grid grid-cols-3 gap-1 mx-6 py-6 px-6 rounded-lg h-[100vh] smartphoneRotate:grid-cols-6 smartphoneRotate:h-[1500px] bg-slate-300 lg:w-[900px] lg:mx-auto">
         
