Agregando navbars propio con tailwind + css(para funcionalidad de checked)

--- a/src/pages/prueba.html
+++ b/src/pages/prueba.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/estilos.css" rel="stylesheet">
+    <!-- <link href="../output.css" rel="stylesheet"> -->
+    <link href="../css/prueba.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
-    <script defer src="../js/preferences.js"></script>
+    <script defer src="../js/prueba.js"></script>
     <title>Tailwind - CONTACTO</title>
 </head>
 <body class="">
@@ -27,14 +28,4 @@
         href="../index.html">
             <i class="fa-solid fa-arrow-left"></i>
     </a>
-    <div class="container-lenguajes mt-0 ml-2">
-        <input type="checkbox" id="lenguaje" class="input-languaje" />
-        <label for="lenguaje" id="label_languaje" class="label-languaje"></label>
-        <div>
-            <p id="parrafoTraducir">
-                Esta es mi página para practicar y aprender!
-            </p>
-        </div>
-    </div>
     
-</body>
