--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -45,18 +45,7 @@
             </p>
         </div>
     </section>
-    <div class="
-                flex 
-                place-content-center 
-                items-center
-                flex-wrap
-                gap-4
-                h-150
-                sm:h-[300px]
-                lg:h-[150px]
-                m-10
-                pb-10
-                mt-0">
+    <div class="flex place-content-center items-center flex-wrap gap-4 h-150 sm:h-[300px] lg:h-[150px] m-10 pb-10 mt-0">
         <div class="card grow">1</div>
         <div class="card grow">2</div>
         <div class="card grow">3</div>
