Agregando navbars propio con tailwind)

--- a/src/index.html
+++ b/src/index.html
@@ -53,14 +53,14 @@
         </div>    
         <div class="pb-4 flex justify-center ">
             <a href="./pages/navbar.html" id="btnResposive" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
-                NAVBAR
+                NAVBARS
             </a>
         </div>
-        <div class="pb-4 flex justify-center ">
+        <!-- <div class="pb-4 flex justify-center ">
             <a href="./pages/prueba.html" id="btnResposive" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
                 PRUEBA
             </a>
-        </div>
+        </div> -->
     </main>
     <footer>
         <div class="text-center py-10">
