Agregando estilos a los navbars propio

--- a/src/pages/navbar2.html
+++ b/src/pages/navbar2.html
@@ -15,7 +15,7 @@
             <nav class="pl-6">
               <label class="hamburger">
                 <input type="checkbox" id="btnOpenModal" class="" />
-                <svg viewBox="0 0 32 32">
+                <svg viewBox="0 0 32 32" class="navbarHidden:hidden">
                   <path
                     d="M27 10 13 10C10.8 10 9 8.2 9 6 9 3.5 10.8 2 13 2 15.2 2 17 3.8 17 6L17 26C17 28.2 18.8 30 21 30 23.2 30 25 28.2 25 26 25 23.8 23.2 22 21 22L7 22"
                     class="line line-top-bottom"
@@ -23,23 +23,27 @@
                   <path d="M7 16 27 16" class="line"></path>
                 </svg>
               </label>
-                <dialog id="modal" class="modal">
-                  <li class="navbarHidden:inline-block leading-[80px] navbarHidden:mt-0 mt-[50px] mr-0 tablet:mr-4">
-                    <a href="#" class="navbarHidden:bg-slate-600 navbarHidden:p-2 navbarHidden:rounded-md hover:text-white fhd:font-semibold font text-[14px] tablet:text[18px]">
-                        INICIO
-                    </a>
-                </li>
-                <li class="navbarHidden:inline-block leading-[80px] mr-0 tablet:mr-4 navbarHidden:mt-0 mt-[50px]">
-                    <a href="#" class="hover:text-white navbarHidden:hover:bg-slate-500 navbarHidden:p-2 navbarHidden:rounded-md fhd:font-semibold transition duration-700 ease-in-out">
-                        REPOSITORIO GITHUB
-                    </a>
-                </li>
-                <li class="navbarHidden:inline-block leading-[80px] navbarHidden:mt-0 mt-[50px]">
-                    <a href="#" class="hover:text-white navbarHidden:hover:bg-slate-500 p-2 rounded-md fhd:font-semibold transition duration-700 ease-in-out">
-                        DESCARGA MI CV
-                    </a>
-                </li>
+                <dialog id="modal" class="modal navbarHidden:hidden">
+                  
+                  <ul>                
+                    <li class="leading-[80px] mt-[50px] mr-0">
+                        <a href="#" class="hover:text-white font text-[14px]">
+                            INICIO
+                        </a>
+                    </li>
+                    <li class="leading-[80px] mr-0 mt-[50px]">
+                        <a href="#" class="hover:text-white font text-[14px]">
+                            REPOSITORIO GITHUB
+                        </a>
+                    </li>
+                    <li class="leading-[80px] mt-[50px]">
+                        <a href="#" class="hover:text-white font text-[14px]">
+                            DESCARGA MI CV
+                        </a>
+                    </li>
+                  </ul>
                 </dialog>
+                
                 <a href="./navbar.html" class="">
                   <div class="bg-[url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU')] bg-cover bg-center rounded-full w-10 h-10 cursor-pointer brightness-100 contrast-100 absolute top-5 right-[24px] tabletXL:right-[32px]">                   
                   </div>
@@ -49,3 +53,25 @@
         <section class=" h-calc bg-[url('https://images3.alphacoders.com/130/1308690.jpg')] bg-no-repeat bg-cover bg-center"></section>
     </body>
 </html>
+
+<!-- <ul class="navbarHidden:w-full navbarHidden:h-20 hidden navbarHidden:top-0 navbarHidden:float-right navbarHidden:pl-6 tabletXL:pl-8 navbarHidden:bg-[#2A3A47] navbarHidden:block font-semibold text-center  navbarHidden:text-left">
+                    <li class="navbarHidden:inline-block leading-[80px] navbarHidden:mt-0 mt-[50px] mr-0 tablet:mr-4">
+                      <a href="#" class="navbarHidden:bg-slate-600 navbarHidden:p-2 navbarHidden:rounded-md hover:text-white fhd:font-semibold font text-[14px] tablet:text[18px]">
+                        INICIO
+                    </a>
+                    </li>
+                    <li class="navbarHidden:inline-block leading-[80px] mr-0 tablet:mr-4 navbarHidden:mt-0 mt-[50px]">
+                      <a href="#" class="hover:text-white navbarHidden:hover:bg-slate-500 navbarHidden:p-2 navbarHidden:rounded-md fhd:font-semibold transition duration-700 ease-in-out">
+                          REPOSITORIO GITHUB
+                      </a>
+                    </li>
+                    <li class="navbarHidden:inline-block leading-[80px] navbarHidden:mt-0 mt-[50px]">
+                      <a href="#" class="hover:text-white navbarHidden:hover:bg-slate-500 p-2 rounded-md fhd:font-semibold transition duration-700 ease-in-out">
+                          DESCARGA MI CV
+                      </a>
+                    </li>
+                  </ul> -->
+                    <!-- <p class="leading-[80px] mt-[50px] mr-0 hover:text-white font-text-[14px]">INICIO</p>
+                    <p class="leading-[80px] mt-[50px] mr-0 hover:text-white font-text-[14px]">REPO</p>
+                    <p class="leading-[80px] mt-[50px] mr-0 hover:text-white font-text-[14px]">CV</p> 
+                </ul> -->
