--- a/src/pages/navbar1.html
+++ b/src/pages/navbar1.html
@@ -6,14 +6,15 @@
         <link href="../output.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
+        <script defer src="../js/navbar1.js"></script>
         <title>NAVBAR 1</title>
     </head>
     <body class="bg-slate-600 box-border p-0 m-0 transition duration-5000 ease-in-out scroll-smooth">
         <header>
             <nav class="h-20 w-full bg-[#2A3A47]">
                 <input type="checkbox" id="burguer" class="hidden peer">
-                <label for="burguer" class="navbarHidden:hidden">
-                    <i class="fa-solid fa-bars text-4xl absolute left-[20px] cursor-pointer top-5 text-[#161D2D]"></i>
+                <label for="burguer" class="navbarHidden:hidden" id="icon">
+                    <i class="fa-solid fa-bars text-4xl absolute left-[20px] cursor-pointer top-5 text-[#161D2D]" id="icono"></i>
                 </label>
                 <a href="./navbar.html" class="">
                     <div class="bg-[url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU')] bg-cover bg-center rounded-full w-10 h-10 cursor-pointer brightness-100 contrast-100 absolute top-5 right-[24px] tabletXL:right-[32px]">                   
