--- a/src/pages/navbar2.html
+++ b/src/pages/navbar2.html
@@ -10,7 +10,7 @@
         <script defer src="../js/navbar2.js"></script>
         <title>NAVBAR 2</title>
     </head>
-    <body class="bg-slate-600 box-border p-0 m-0 transition duration-5000 ease-in-out scroll-smooth">
+    <body class="bg-slate-600 box-border p-0 m-0 duration-1000 ease-in-out scroll-smooth">
         <header class="flex items-center">
             <nav class="pl-6">
               <input type="checkbox" id="btnOpenModal" class="hidden peer" />
@@ -24,18 +24,18 @@
                       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: #7aacd1;transform: msFilter"><path d="M2 15h7v7h2v-9H2v2zM15 2h-2v9h9V9h-7V2z"></path></svg>
                   </div>                  
                   <ul>                
-                    <li class="leading-[80px] mt-[50px] mr-0 ">
-                        <a href="#" class="outline-none hover:text-white font text-[14px]">
+                    <li class="leading-[80px] mt-[50px] mr-0">
+                        <a href="#" class="outline-none hover:text-white font text-[14px] duration-300 ">
                             INICIO
                         </a>
                     </li>
                     <li class="leading-[80px] mr-0 mt-[50px]">
-                        <a href="#" class="hover:text-white font text-[14px]">
+                        <a href="#" class="hover:text-white font text-[14px] duration-300">
                             REPOSITORIO GITHUB
                         </a>
                     </li>
                     <li class="leading-[80px] mt-[50px]">
-                        <a href="#" class="hover:text-white font text-[14px]">
+                        <a href="#" class="hover:text-white font text-[14px] duration-300">
                             DESCARGA MI CV
                         </a>
                     </li>
