--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
             </a>
         </div>    
         <div class="pb-4 flex justify-center ">
-            <a href="./pages/navbar.html" id="btnResposive" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
-                NAVBARS
+            <a href="./pages/navbar.html" id="btnNav" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
+                NAVEGACIÓN
             </a>
         </div>
         <!-- <div class="pb-4 flex justify-center ">
