--- a/src/pages/navbar.html
+++ b/src/pages/navbar.html
@@ -34,13 +34,13 @@
     </header>                   
     <main >
         <div class="pb-4 flex justify-center ">
-            <a href="./navbar1.html" id="btnResposive" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
-                NAVBAR 1
+            <a href="./navbar1.html" id="nav1" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
+                BARRA DE NAVEGACIÓN 1
             </a>
         </div>
         <div class="pb-4 flex justify-center ">
-            <a href="./navbar2.html" id="btnResposive" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
-                NAVBAR 2
+            <a href="./navbar2.html" id="nav2" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
+                BARRA DE NAVEGACIÓN 2
             </a>
         </div>
     </main>
