agregando navbar a index

--- a/src/pages/navbar.html
+++ b/src/pages/navbar.html
@@ -29,7 +29,7 @@
     </a> 
     <header class="p-3 smartphone:mt-20 smartphoneRotate:mt-20">
         <p id="titulo-navbars" class="text-center smartphone:text-2xl smartphoneRotate:text-5xl dark:text-slate-400">
-            EJEMPLOS DE NAVBARS
+            EJEMPLOS DE BARRAS DE NAVEGACIÓN
         </p>
     </header>                   
     <main >
