--- a/src/pages/navbar1.html
+++ b/src/pages/navbar1.html
@@ -13,8 +13,8 @@
         <header>
             <nav class="h-20 w-full bg-[#2A3A47]">
                 <div class="container">
-                    <input type="checkbox" id="burguer" class="hidden peer">
-                    <label for="burguer" class="peer-checked:hidden navbarHidden:hidden transition-all duration-1000 ease-in-out">
+                    <input type="checkbox" id="burger" class="hidden peer">
+                    <label for="burger" class="peer-checked:hidden navbarHidden:hidden transition-all duration-1000 ease-in-out">
                         <i class="absolute left-[20px] cursor-pointer top-5">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill: #75a8d1"><path d="M4 11h12v2H4zm0-5h16v2H4zm0 12h7.235v-2H4z"></path></svg>
                         </i>
