agregando navbar a inde2x

--- a/src/pages/navbar1.html
+++ b/src/pages/navbar1.html
@@ -19,7 +19,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill: #75a8d1"><path d="M4 11h12v2H4zm0-5h16v2H4zm0 12h7.235v-2H4z"></path></svg>
                         </i>
                     </label> 
-                    <label for="burguer" class="hidden peer-checked:block navbarHidden:hidden transition-all duration-1000 ease-in-out">
+                    <label for="burger" class="hidden peer-checked:block navbarHidden:hidden transition-all duration-1000 ease-in-out">
                         <i class="absolute left-[20px] cursor-pointer top-5">
                             <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 24 24" style="fill: #75a8d1"><path d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path></svg>
                         </i>
