agregando ajustes al responsive2

--- a/src/index.html
+++ b/src/index.html
@@ -41,17 +41,17 @@
                     </div>
                     
                     <li class="tabletXL:inline-block leading-[80px] tabletXL:mt-0 mt-[50px]">
-                        <a href="./pages/contacto.html" id="btnContacto" class="hover:dark:text-shadow cursor-pointer p-2 rounded-md fhd:font-semibold transition duration-700 ease-in-out text- 3xl text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black ">
+                        <a href="./pages/contacto.html" id="btnContacto" class="hover:dark:text-shadow cursor-pointer p-2 rounded-md transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black ">
                         CONTACTO
                         </a>
                     </li>
                     <li class="tabletXL:inline-block leading-[80px] tabletXL:mt-0 mt-[50px] hover:dark:text-shadow hover:dark:transition hover:dark:duration-700 hover:dark:ease-in-out">
-                        <a href="./pages/responsive.html" id="btnResposive" class="tabletXL:hover:bg-slate-500 p-2 rounded-md fhd:font-semibold transition duration-700 ease-in-out text- 3xl text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black hover:dark:text-shadow">
+                        <a href="./pages/responsive.html" id="btnResposive" class="tabletXL:hover:bg-slate-500 p-2 rounded-md  transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black hover:dark:text-shadow">
                         DISEÑO RESPONSIVO
                         </a>
                     </li>
                     <li class="tabletXL:inline-block leading-[80px] tabletXL:mt-0 mt-[50px]">
-                        <a href="./pages/navbar.html" id="btnNav" class="tabletXL:hover:bg-slate-500 p-2 rounded-md fhd:font-semibold transition duration-700 ease-in-out text- 3xl text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black hover:dark:text-shadow hover:dark:transition hover:dark:duration-700 hover:dark:ease-in-out">
+                        <a href="./pages/navbar.html" id="btnNav" class="tabletXL:hover:bg-slate-500 p-2 rounded-md  transition duration-700 ease-in-out text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black hover:dark:text-shadow hover:dark:transition hover:dark:duration-700 hover:dark:ease-in-out">
                         NAVEGACION
                         </a>
                     </li>
@@ -67,7 +67,7 @@
     </header>
     <main id="main" class="transition-opacity duration-500 opacity-100">
         <div class="flex justify-center items-center h-50 w-screen text-center">
-            <span id="tituloPrincipal" class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center text-5xl font-extrabold uppercase tracking-widest dark:text-shadow tablet:text-6xl pb-28 pt-20 tabletXL:text-7xl fhd:text-9xl">
+            <span id="tituloPrincipal" class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center text-5xl font-extrabold uppercase tracking-widest dark:text-shadow tablet:text-6xl pb-28 pt-20 tabletXL:text-7xl fhd:text-9xl fhd:mt-14">
                 Hola mundo!
             </span>
         </div>        
