--- a/src/pages/navbar1.html
+++ b/src/pages/navbar1.html
@@ -31,17 +31,18 @@
                     <ul class="fixed w-full h-screen bg-[#2A3A47] top-20 -left-full navbarHidden:static navbarHidden:w-full navbarHidden:h-20 navbarHidden:top-0 navbarHidden:float-right navbarHidden:pl-6 tabletXL:pl-8 navbarHidden:bg-[#2A3A47] navbarHidden:block font-semibold text-center  navbarHidden:text-left transition-all duration-700 ease-in-out peer-checked:left-0">
                 
                         <li class="navbarHidden:inline-block leading-[80px] navbarHidden:mt-0 mt-[50px] mr-0 tablet:mr-4">
-                            <a href="#" class="navbarHidden:bg-slate-500 navbarHidden:p-2 navbarHidden:rounded-md hover:text-white fhd:font-semibold font text-[16px] tablet:text[18px]">
+                            <a href="#" class="navbarHidden:bg-slate-500 
+                            navbarHidden:p-2 navbarHidden:rounded-md hover:text-white fhd:font-semibold font text-[16px] tablet:text[18px]transition duration-700 ease-in-out nav-button">
                             INICIO
                             </a>
                         </li>
                         <li class="navbarHidden:inline-block leading-[80px] mr-0 tablet:mr-4 navbarHidden:mt-0 mt-[50px]">
-                            <a href="#" class="hover:text-white navbarHidden:hover:bg-slate-500 navbarHidden:p-2 navbarHidden:rounded-md fhd:font-semibold transition duration-700 ease-in-out">
+                            <a href="#" class="hover:text-white navbarHidden:hover:bg-slate-500 navbarHidden:bg-transparent navbarHidden:p-2 navbarHidden:rounded-md fhd:font-semibold transition duration-700 ease-in-out nav-button">
                             REPOSITORIO GITHUB
                             </a>
                         </li>
                         <li class="navbarHidden:inline-block leading-[80px] navbarHidden:mt-0 mt-[50px]">
-                            <a href="#" class="hover:text-white navbarHidden:hover:bg-slate-500 p-2 rounded-md fhd:font-semibold transition duration-700 ease-in-out">
+                            <a href="#" class="hover:text-white navbarHidden:hover:bg-slate-500 navbarHidden:bg-transparent p-2 rounded-md fhd:font-semibold transition duration-700 ease-in-out nav-button">
                             DESCARGA MI CV
                             </a>
                         </li>
